@@ -1,3 +1,0 @@
-- Unportable code:
-  * getline()
-
