@@ -17,4 +17,5 @@ voikkohyphenate_LDADD = libvoikko.la
 
 pkginclude_HEADERS = voikko.h
 noinst_HEADERS = voikko_utils.h voikko_setup.h voikko_spell.h \
-                 voikko_hyphenate.h voikko_defs.h porting.h
+                 voikko_hyphenate.h voikko_defs.h porting.h voikko_suggest.h
+
