@@ -1,3 +1,8 @@
+2006-05-22  Harri Pitkänen  <hatapitk@iki.fi>
+
+	* Character case correcting suggestions
+	* New options in voikkospell: -s, accept_first_uppercase=0|1
+
 2006-05-20  Harri Pitkänen  <hatapitk@iki.fi>
 
 	* Add cache size parameter to voikko_init
